# cafe-applets

./: .build.yml  .travis.yml  AUTHORS  Makefile.am  NEWS  README  autogen.sh  bbuild-debs.sh  cafe-accessx-status.pot  cafe-applets-dbgsym_1.25.0-1_amd64.deb  cafe-applets.pot  cafe-applets_1.25.0-1_amd64.buildinfo  cafe-applets_1.25.0-1_amd64.changes  cafe-applets_1.25.0-1_amd64.deb  cafe-battstat.pot  cafe-char-palette.pot  cafe-cpufreq-applet.pot  cafe-drivemount.pot  cafe-geyes.pot  cafe-multiload.pot  cafe-netspeed-applet.pot  cafe-stickynotes-applet.pot  cafe-trashapplet.pot  cafeweather.pot  configure.ac  debian.tar.xz  index.html  makepot  output_502326210a20f0c0b8e419dd768c04bc5b9914fa  output_aa868c55f313ebea0ecdedb956bc29553c7a3007  output_d15c4b46a50d4a89a6ae977adaaf40f013a2f035
accessx-status/pixmaps/: Makefile.am
accessx-status/pixmaps/16x16/: Makefile.am
accessx-status/pixmaps/24x24/: Makefile.am
accessx-status/pixmaps/32x32/: Makefile.am
accessx-status/pixmaps/48x48/: Makefile.am
cafeweather/: Makefile.am  cafeweather-about.c  cafeweather-about.h  cafeweather-applet.c  cafeweather-applet.h  cafeweather-dialog.c  cafeweather-dialog.h  cafeweather-pref.c  cafeweather-pref.h  cafeweather.h  main.c  org.cafe.applets.CafeWeatherApplet.cafe-panel-applet.desktop.in.in  org.cafe.panel.applet.CafeWeatherAppletFactory.service.in
cafeweather/docs/: Makefile.am
cafeweather/docs/C/: index.docbook
cafeweather/docs/af/: af.po
cafeweather/docs/am/: am.po
cafeweather/docs/ar/: ar.po
cafeweather/docs/as/: as.po
cafeweather/docs/ast/: ast.po
cafeweather/docs/az/: az.po
cafeweather/docs/be/: be.po
cafeweather/docs/bg/: bg.po
cafeweather/docs/bn/: bn.po
cafeweather/docs/bn_IN/: bn_IN.po
cafeweather/docs/br/: br.po
cafeweather/docs/bs/: bs.po
cafeweather/docs/ca/: ca.po
cafeweather/docs/ca@valencia/: ca@valencia.po
cafeweather/docs/cmn/: cmn.po
cafeweather/docs/crh/: crh.po
cafeweather/docs/cs/: cs.po
cafeweather/docs/cy/: cy.po
cafeweather/docs/da/: da.po
cafeweather/docs/de/: de.po
cafeweather/docs/dz/: dz.po
cafeweather/docs/el/: el.po
cafeweather/docs/en_AU/: en_AU.po
cafeweather/docs/en_CA/: en_CA.po
cafeweather/docs/en_GB/: en_GB.po
cafeweather/docs/eo/: eo.po
cafeweather/docs/es/: es.po
cafeweather/docs/es_AR/: es_AR.po
cafeweather/docs/es_CL/: es_CL.po
cafeweather/docs/es_CO/: es_CO.po
cafeweather/docs/es_CR/: es_CR.po
cafeweather/docs/es_DO/: es_DO.po
cafeweather/docs/es_EC/: es_EC.po
cafeweather/docs/es_ES/: es_ES.po
cafeweather/docs/es_MX/: es_MX.po
cafeweather/docs/es_NI/: es_NI.po
cafeweather/docs/es_PA/: es_PA.po
cafeweather/docs/es_PE/: es_PE.po
cafeweather/docs/es_PR/: es_PR.po
cafeweather/docs/es_SV/: es_SV.po
cafeweather/docs/es_UY/: es_UY.po
cafeweather/docs/es_VE/: es_VE.po
cafeweather/docs/et/: et.po
cafeweather/docs/eu/: eu.po
cafeweather/docs/fa/: fa.po
cafeweather/docs/fi/: fi.po
cafeweather/docs/fr/: fr.po
cafeweather/docs/frp/: frp.po
cafeweather/docs/fur/: fur.po
cafeweather/docs/fy/: fy.po
cafeweather/docs/ga/: ga.po
cafeweather/docs/gl/: gl.po
cafeweather/docs/gu/: gu.po
cafeweather/docs/ha/: ha.po
charpick/: Makefile.am  charpick.c  charpick.h  org.cafe.applets.CharpickerApplet.cafe-panel-applet.desktop.in.in  org.cafe.panel.applet.CharpickerAppletFactory.service.in  org.cafe.panel.applet.charpick.gschema.xml.in  properties.c
charpick/help/: Makefile.am
command/: Makefile.am  command.c  ma-command.c  org.cafe.panel.applet.CommandAppletFactory.service.in  org.cafe.panel.applet.command.gschema.xml.in
cpufreq/: Makefile.am  README  cpufreq-preferences.ui  org.cafe.applets.CPUFreqApplet.cafe-panel-applet.desktop.in.in  org.cafe.panel.applet.CPUFreqAppletFactory.service.in  org.cafe.panel.applet.cpufreq.gschema.xml.in
cpufreq/help/: Makefile.am  cafe-cpufreq-applet.omf.in
cpufreq/pixmaps/: Makefile.am
cpufreq/src/: Makefile.am  cpufreq-applet.c  cpufreq-applet.h  cpufreq-monitor-cpuinfo.c  cpufreq-monitor-cpuinfo.h  cpufreq-monitor-factory.c  cpufreq-monitor-factory.h  cpufreq-monitor-libcpufreq.c  cpufreq-monitor-libcpufreq.h  cpufreq-monitor-procfs.c  cpufreq-monitor-procfs.h  cpufreq-monitor-sysfs.c  cpufreq-monitor-sysfs.h  cpufreq-monitor.c  cpufreq-monitor.h  cpufreq-popup.c  cpufreq-popup.h  cpufreq-prefs.c  cpufreq-prefs.h  cpufreq-selector.c  cpufreq-selector.h  cpufreq-utils.c  cpufreq-utils.h
drivemount/: Makefile.am  drive-button.c  drive-button.h  drive-list.c  drive-list.h  drivemount.c  org.cafe.applets.DriveMountApplet.cafe-panel-applet.desktop.in.in  org.cafe.drivemount.gschema.xml.in  org.cafe.panel.applet.DriveMountAppletFactory.service.in
drivemount/help/: Makefile.am
multiload/: Makefile.am  autoscaler.h  global.h  linux-proc.c  load-graph.c  main.c  org.cafe.applets.MultiLoadApplet.cafe-panel-applet.desktop.in.in  org.cafe.panel.applet.MultiLoadAppletFactory.service.in  org.cafe.panel.applet.multiload.gschema.xml.in  properties.c
multiload/docs/: Makefile.am
netspeed/data/: Makefile.am  netspeed-menu.xml  org.cafe.applets.NetspeedApplet.cafe-panel-applet.desktop.in.in  org.cafe.panel.applet.NetspeedAppletFactory.service.in  org.cafe.panel.applet.netspeed.gschema.xml.in
netspeed/icons/: Makefile.am
netspeed/src/: Makefile.am  backend.c  netspeed.c
stickynotes/: Makefile.am  README  org.cafe.applets.StickyNotesApplet.cafe-panel-applet.desktop.in.in  org.cafe.panel.applet.StickyNotesAppletFactory.service.in  org.cafe.stickynotes.gschema.xml.in  sticky-notes-delete-all.ui  sticky-notes-delete.ui  sticky-notes-note.ui  sticky-notes-preferences.ui  sticky-notes-properties.ui  sticky-notes-resources.gresource.xml  stickynotes.c  stickynotes.h  stickynotes.ui  stickynotes_applet.c  stickynotes_applet.h  stickynotes_applet_callbacks.c  stickynotes_applet_callbacks.h  stickynotes_callbacks.c  stickynotes_callbacks.h  util.c  util.h
stickynotes/docs/: Makefile.am
stickynotes/pixmaps/: Makefile.am
trashapplet/src/: Makefile.am  trash-empty.c  trash-empty.h  trashapplet.c  xstuff.c  xstuff.h
(+2743 files in other folders)
