accessx_status_iconsdir = $(iconsdir)/hicolor/16x16/apps
accessx_status_icons_DATA =	\
	cafe-ax-key-base.png			\
	cafe-ax-key-inverse.png			\
	cafe-ax-key-none.png			\
	cafe-ax-key-yes.png			\
	cafe-ax-key-no.png			\
	cafe-mousekeys-base.png			\
	cafe-mousekeys-pressed-left.png		\
	cafe-mousekeys-pressed-middle.png	\
	cafe-mousekeys-pressed-right.png	\
	cafe-mousekeys-default-left.png		\
	cafe-mousekeys-default-middle.png	\
	cafe-mousekeys-default-right.png	\
	cafe-sticky-shift-none.png		\
	cafe-sticky-shift-latched.png		\
	cafe-sticky-shift-locked.png		\
	cafe-sticky-ctrl-none.png		\
	cafe-sticky-ctrl-latched.png		\
	cafe-sticky-ctrl-locked.png		\
	cafe-sticky-alt-none.png		\
	cafe-sticky-alt-latched.png		\
	cafe-sticky-alt-locked.png		\
	cafe-sticky-meta-latched.png		\
	cafe-sticky-meta-locked.png		\
	cafe-sticky-meta-none.png		\
	cafe-sticky-hyper-latched.png		\
	cafe-sticky-hyper-locked.png		\
	cafe-sticky-hyper-none.png		\
	cafe-sticky-super-latched.png		\
	cafe-sticky-super-locked.png		\
	cafe-sticky-super-none.png		\
	cafe-ax-slowkeys.png			\
	cafe-ax-slowkeys-pending.png		\
	cafe-ax-slowkeys-yes.png		\
	cafe-ax-slowkeys-no.png			\
	cafe-ax-bouncekeys.png

EXTRA_DIST = \
	$(accessx_status_icons_DATA)


-include $(top_srcdir)/git.mk
