themedir = $(datadir)/icons/hicolor
size = 24x24
context = status

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = \
	cafe-netspeed-wireless-25.png \
	cafe-netspeed-wireless-50.png \
	cafe-netspeed-wireless-75.png \
	cafe-netspeed-wireless-100.png

EXTRA_DIST =		\
	$(icons_DATA)

-include $(top_srcdir)/git.mk
